add: naming style metric

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(metric
     metric_impl/code_lines_count.cpp
     metric_impl/cyclomatic_complexity.cpp
     metric_impl/parameters_count.cpp
+    metric_impl/naming_style.cpp
 )
 
 target_link_libraries(metric
