add: categorical accumulator tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(metric_accumulator
     metric_accumulator.cpp
     metric_accumulator_impl/average_accumulator.cpp
     metric_accumulator_impl/sum_average_accumulator.cpp
+    metric_accumulator_impl/categorical_accumulator.cpp
 )
 
 target_link_libraries(metric_accumulator
