--- a/src/metric_impl/CMakeLists.txt
+++ b/src/metric_impl/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(target metric_test)
 
+add_compile_definitions(TEST_FILES_DIR="${CMAKE_CURRENT_BINARY_DIR}")
+
 add_executable(${target}
     tests/code_lines_count.cpp
     tests/cyclomatic_complexity.cpp
@@ -22,8 +24,9 @@ foreach(file IN LISTS test_files)
     configure_file(${file} "${CMAKE_CURRENT_BINARY_DIR}/${file_name}" COPYONLY)
 endforeach()
 
-target_compile_definitions(${target} PRIVATE
-    TEST_FILES_DIR="${CMAKE_CURRENT_BINARY_DIR}"
-)
-
 add_test(NAME ${target} COMMAND ${target})
+
+# Добавляем тесты для analyse функций
+add_executable(analyse_test tests/analyse.cpp)
+target_link_libraries(analyse_test PRIVATE GTest::GTest GTest::Main metric function file metric_accumulator)
+add_test(NAME analyse_test COMMAND analyse_test)
